syntax = "proto3";

option java_package = "au.com.alfie.ecomm.data.datastore";
option java_multiple_files = true;

message UserPreferencesProto {

    ProductListLayoutModeProto product_list_layout_mode = 1;

    enum ProductListLayoutModeProto {
        GRID = 0;
        COLUMN = 1;
    }
}
